changed wording of notice

--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -67,7 +67,7 @@
             <p>
                 Due to most of the team being preoccupied with exams, we will not be able to release new sheets for the time being.
                 Regular updates will likely resume around January.
-                We apologize for any inconveniences in advance. 
+                We apologize for any inconvenience caused. 
             </p>
 
             <!--
