Updated sheets page

--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -142,22 +142,22 @@
                         <a href="https://bit.ly/35MHvbu" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-            
+            -->
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
-                        <h2>Issue 10</h2>
+                        <h2>Issue 13</h2>
                         <h5>Week 2</h5>
-                        <h2>Moons</h2>
+                        <h2>Reef and Shore Life</h2>
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="https://bit.ly/2INET4s" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/moons.jpg">
+                        <a href="http://bit.ly/2XNV0TF" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/6_reef_and_shore_life.jpg">
                         </a>
-                        <a href="https://bit.ly/3nywTTJ" target="_blank" class="btn btn-colour-1">Answers</a>
+                        <a href="http://bit.ly/3oXOJjW" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-            -->
+            
                 <div id="bottom-sheet" class="row issue-display">
                     <div class="col text-center sheet-info">
                         <h2>Issue 12</h2>
