Changed team member

--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -113,8 +113,8 @@
 
     </div>
     <div class="col team-member">
-        <h1>Anthony Baek</h1>
-        <img src="img/People/anthony.png" class="headshot">
+        <h1>Greg Milnor</h1>
+        <img src="img/People/greg.png" class="headshot">
         <p>
             University of British Columbia, 2022
             <br>Computer Science, BSc.
