--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -127,22 +127,22 @@
                         <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-            
+            -->
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
-                        <h2>Issue 11</h2>
+                        <h2>Issue 14</h2>
                         <h5>Week 3</h5>
-                        <h2>Aliens</h2>
+                        <h2>Deep Sea Animals</h2>
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="https://bit.ly/3nEbubI" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/aliens.jpg">
+                        <a href="http://bit.ly/3ohHUc1" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/7_deep_sea.jpg">
                         </a>
-                        <a href="https://bit.ly/35MHvbu" target="_blank" class="btn btn-colour-1">Answers</a>
+                        <a href="http://bit.ly/3oeeR93" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-            -->
+            
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
                         <h2>Issue 13</h2>
