change to workshop

--- a/workshop.html
+++ b/workshop.html
@@ -50,13 +50,8 @@
 
 <!-- Main content -->
 
-<div class="container-fluid row" id="workshop">
-    <div class="col" id="workshop-text"> 
-        
-    </div>
-    <div class="col">
-
-    </div>
+<div workshop2>
+	<img src="img/wokrshop.png" id="shop-pic">
 </div>
 
 
