Made draft of workshop page

--- a/workshop.html
+++ b/workshop.html
@@ -50,8 +50,32 @@
 
 <!-- Main content -->
 
-<div workshop2>
-	<img src="img/wokrshop.png" id="shop-pic">
+<div class="container-fluid row" id="workshop">
+    <div class="col text-center" id="workshop-text"> 
+		<br>
+		<h1>Workshop</h1>
+		<br>
+        <p>Jit Jots hosts entertaining workshops catered for elementary school students. Workshops will focus on a central scientific theme, 
+			often matching the broad, monthly theme explored by the worksheets. Themes will change with each month. 
+		</p>
+		<p>The workshops are usually set in structure, showcasing numerous, hands-on activities that the students can take part in; however, 
+			adjustments are open to be made depending on the organization. What makes our workshops entertaining and unique is that we include 
+			references to relevant pop and entertainment culture to keep the content being taught relatable and fun for the children. Jit Jots’ 
+			primary goal is to relay seemingly complicated science topics in an approachable and exciting way! 
+		</p>
+		<p>Our workshops are hosted by the co-founders of Jit Jots, as well as volunteers. Workshops will only be available for sign-up by 
+			organizations. Workshop arrangements can be made by reaching out to us at contact@jitjots.com. 
+		</p>
+    </div>
+    <div class="col" id="workshop-pics">
+
+    </div>
+</div>
+<div >
+	<div class="col text-center partnerships">
+		<h1>Partnerships</h1>
+		<img src="img/SVNH.png" id="logo-1">
+	</div>
 </div>
 
 
