Added workshop page

--- a/workshops.html
+++ b/workshops.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Jit Jots, jitjots, jit jots">
 	<meta name="author" content="Anthony Baek">
-	<title>Workshop</title>
+	<title>Workshops</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -41,7 +41,7 @@
 				<a class="nav-link" href="get-involved">Get Involved</a>
 			</li> 
             <li class="nav-item">
-				<a class="nav-link active" href="workshop">Workshop</a>
+				<a class="nav-link active" href="workshops">Workshops</a>
 			</li> 
 		</ul>
 	</div>
@@ -52,7 +52,6 @@
 
 <div class="container-fluid row" id="workshop">
     <div class="col text-center" id="workshop-text"> 
-		<br>
 		<h1>Workshop</h1>
 		<br>
         <p>Jit Jots hosts entertaining workshops catered for elementary school students. Workshops will focus on a central scientific theme, 
@@ -68,7 +67,8 @@
 		</p>
     </div>
     <div class="col" id="workshop-pics">
-
+		<img src="img/class1.png" class="workshop-pic" id="workshop-pic-1">
+		<img src="img/class2.png" class="workshop-pic">
     </div>
 </div>
 <div >
