--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -48,6 +48,9 @@
 			<li class="nav-item">
 				<a class="nav-link" href="get-involved">Get Involved</a>
 			</li> 
+            <li class="nav-item">
+				<a class="nav-link" href="workshops">Workshops</a>
+			</li> 
 		</ul>
 	</div>
 </div>
