--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="get-involved">Get Involved</a>
-			</li> 
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="workshops">Workshops</a>
+			</li>  
 		</ul>
 	</div>
 </div>
