--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -40,6 +40,9 @@
 			<li class="nav-item">
 				<a class="nav-link" href="get-involved">Get Involved</a>
 			</li> 
+            <li class="nav-item">
+				<a class="nav-link" href="workshops">Workshops</a>
+			</li> 
 		</ul>
 	</div>
 </div>
