Small design changes

--- a/workshops.html
+++ b/workshops.html
@@ -38,10 +38,10 @@
 				<a class="nav-link" href="activity-sheets">Activity Sheets</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="get-involved">Get Involved</a>
-			</li> 
-            <li class="nav-item">
 				<a class="nav-link active" href="workshops">Workshops</a>
+			</li> 
+			<li class="nav-item">
+				<a class="nav-link" href="get-involved">Get Involved</a>
 			</li> 
 		</ul>
 	</div>
@@ -52,7 +52,7 @@
 
 <div class="container-fluid row" id="workshop">
     <div class="col text-center" id="workshop-text"> 
-		<h1>Workshop</h1>
+		<h1 id="workshop-title">Workshops</h1>
 		<br>
         <p>Jit Jots hosts entertaining workshops catered for elementary school students. Workshops will focus on a central scientific theme, 
 			often matching the broad, monthly theme explored by the worksheets. Themes will change with each month. 
